--- a/media_queries_orriz.html
+++ b/media_queries_orriz.html
@@ -6,23 +6,59 @@ body {
   background-color: lightblue;
 }
 
-@media screen and (min-width: 400px) {
+div.example {
+    font-size: 50px;
+    padding: 10px;
+    color: cornsilk;
+    border: 8px solid rgb(111, 109, 255);
+    background: rgb(16, 55, 228);
+  }
+
+
+
+@media screen and (min-width: 600px) {
   body {
     background-color: lightgreen;
   }
+  div.example {
+    font-size: 50px;
+    padding: 50px;
+    color: rgb(255, 0, 200);
+    border: 8px solid black;
+    background: rgb(20, 226, 37);
+  }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 900px) {
   body {
     background-color: lavender;
+  }
+  div.example {
+    font-size: 30px;
+    padding: 30px;
+    border: none;
+    background: none;
   }
 }
 </style>
 </head>
 <body>
 
-<h1>Resize the browser window to see the effect!</h1>
-<p>Use mediaqueries to set the background-color to lavender if the viewport is 800 pixels wide or wider, to lightgreen if the viewport is between 400 and 799 pixels wide. If the viewport is smaller than 400 pixels, the background-color is lightblue.</p>
+<div class="example">Sonnet 18</div>
+<p>Shall I compare thee to a summer’s day?</p>
+<p>Thou art more lovely and more temperate:</p>
+<p>Rough winds do shake the darling buds of May,</p>
+<p>And summer’s lease hath all too short a date;</p>
+<p>Sometime too hot the eye of heaven shines,</p>
+<p>And often is his gold complexion dimm'd;</p>
+<p>And every fair from fair sometime declines,</p>
+<p>By chance or nature’s changing course untrimm'd;</p>
+<p>But thy eternal summer shall not fade,</p>
+<p>Nor lose possession of that fair thou ow’st;</p>
+<p>Nor shall death brag thou wander’st in his shade,</p>
+<p>When in eternal lines to time thou grow’st:</p>
+<p>So long as men can breathe or eyes can see,</p>
+<p>So long lives this, and this gives life to thee.</p>
 
 </body>
 </html>
