--- a/media_queries_orriz.html
+++ b/media_queries_orriz.html
@@ -7,11 +7,12 @@ body {
 }
 
 div.example {
-    font-size: 50px;
+    font-size: 100px;
     padding: 10px;
     color: cornsilk;
     border: 8px solid rgb(111, 109, 255);
     background: rgb(16, 55, 228);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
 
 
@@ -21,7 +22,7 @@ div.example {
     background-color: lightgreen;
   }
   div.example {
-    font-size: 50px;
+    font-size: 60px;
     padding: 50px;
     color: rgb(255, 0, 200);
     border: 8px solid black;
