--- a/media_queries_orriz.html
+++ b/media_queries_orriz.html
@@ -4,6 +4,7 @@
 <style>
 body {
   background-color: lightblue;
+  text-align: center;
 }
 
 div.example {
@@ -23,9 +24,9 @@ div.example {
   }
   div.example {
     font-size: 60px;
-    padding: 50px;
+    padding: 20px;
     color: rgb(255, 0, 200);
-    border: 8px solid black;
+    border: 3px solid black;
     background: rgb(20, 226, 37);
   }
 }
