--- a/media_queries_orriz.html
+++ b/media_queries_orriz.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 <style>
+  * {
+  margin: 15px;
+  padding: 0;
+}
 body {
   background-color: lightblue;
   text-align: center;
+  
 }
 
 div.example {
-    font-size: 100px;
+    font-size: 80px;
     padding: 10px;
     color: cornsilk;
     border: 8px solid rgb(111, 109, 255);
